--- a/config/default.yaml
+++ b/config/default.yaml
@@ -11,7 +11,7 @@ Main:
     batch-size: 2
     epochs:     1
     
-    framework: torchtune
+    framework: unsloth
 
 Devices:
   idle_device: cpu
