--- a/config/default.yaml
+++ b/config/default.yaml
@@ -11,7 +11,7 @@ Main:
     batch-size: 2
     epochs:     1
     
-    framework: unsloth
+    framework: PEFT
 
 Devices:
   idle_device: cpu
@@ -48,6 +48,7 @@ Models:
     - Llama-3.2-1B-Instruct
     - Llama-3.2-3B
     - Llama-3.2-3B-Instruct
+    - Llama-3.1-8B-Instruct
 
 Datasets:
   HuggingFaceTB:
