--- a/config/default.yaml
+++ b/config/default.yaml
@@ -18,7 +18,7 @@ Devices:
 
 Inference:
   show input:           no
-  skip special tokens:  no 
+  skip special tokens:  yes 
 
 Fine-Tuning:
   batch-size: 4
