--- a/config/default.yaml
+++ b/config/default.yaml
@@ -4,14 +4,14 @@
 Main:
   log level: debug
   
-  base model: Llama-3.1-8B-Instruct
+  base model: Llama-3.2-3B-Instruct
   Fine-Tuned Model:
-    dataset:    numina-cot-100k
+    dataset:    apigen-80k
     method:     LoRA
     batch-size: 2
     epochs:     1
     
-    framework: PEFT
+    framework: unsloth
 
 Devices:
   idle_device: cpu
