--- a/config/default.yaml
+++ b/config/default.yaml
@@ -3,10 +3,9 @@
 # =============================================================================
 Main:
   log level: debug
-  
-  base model: Ministral-8B-Instruct-2410
+  base model: Llama-3.2-1B-Instruct
   Fine-Tuned Model:
-    dataset:    apigen-80k
+    dataset:    numina-cot-100k
     method:     LoRA
     batch-size: 2
     epochs:     1
