--- a/config/default.yaml
+++ b/config/default.yaml
@@ -5,7 +5,7 @@ Main:
   log level: debug
   base model: Llama-3.2-1B-Instruct
   Fine-Tuned Model:
-    dataset:    numina-cot-100k
+    dataset:    apigen-80k
     method:     LoRA
     batch-size: 2
     epochs:     1
